--- a/src/CanvasPowerCoffee/Src/SiteDetails.fx.yaml
+++ b/src/CanvasPowerCoffee/Src/SiteDetails.fx.yaml
@@ -1,4 +1,4 @@
-SiteDetails As screen:
+CompareScreen As screen:
     Fill: =RGBA(246, 244, 240,1)
     LoadingSpinnerColor: =App.Theme.Colors.Primary
     OnVisible: =Select(btnOnVis_3)
@@ -10,9 +10,9 @@ SiteDetails As screen:
             /*
             Table(
                 {
-                    ScreenName:["TemplateScreen",""]
-                    ,DisplayScreenName:"TemplateScreen"
-                    ,Navigation:TemplateScreen
+                    ScreenName:["GuidedFlowScreen",""]
+                    ,DisplayScreenName:"Guided Flow"
+                    ,Navigation:GuidedFlowScreen
                     ,DefaultPathColour:"'#FFFFFF'"
                     ,LogoHeight:"'28'"
                     ,LogoWidth:"'48'"
@@ -25,9 +25,9 @@ SiteDetails As screen:
                     ,TextColour:RGBA(255,255,255,1)
                 },
                 {
-                    ScreenName:["TemplateControls",""]
-                    ,DisplayScreenName:"TemplateControls"
-                    ,Navigation:TemplateControls
+                    ScreenName:["QuickNoteScreen",""]
+                    ,DisplayScreenName:"Quick Note"
+                    ,Navigation:QuickNoteScreen
                     ,DefaultPathColour:"'#FFFFFF'"
                     ,LogoHeight:"'28'"
                     ,LogoWidth:"'48'"
