--- a/src/CanvasPowerCoffee/Src/App.fx.yaml
+++ b/src/CanvasPowerCoffee/Src/App.fx.yaml
@@ -29,7 +29,7 @@ App As appinfo:
             }
         ;
         
-    StartScreen: =LandingScreen
+    StartScreen: =HomeScreen
     Theme: =Diageo
 
     Host As hostControl.DefaultHostControlVariant:
